--- a/Asgmnt.html
+++ b/Asgmnt.html
@@ -5,6 +5,7 @@
 	<title>Html Final Project</title>
 </head>
 <body>
+	<div class = "container">
       <header>
 	      <h1><mark>Nikhil Kumar</mark></h1>
 	      <nav>
@@ -43,4 +44,5 @@
       	This page was created by <mark>Nikhil Kumar</mark> &amp; Colleen van Lent.To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>.
       </footer>
 </body>
+	</div>
 </html>
